plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.9'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.Global_Go'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // ✅ Spring Boot 핵심
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // ✅ 유효성 검증
    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'

    // ✅ JWT 인증 관련 (실무 기준: runtimeOnly 처리)
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // ✅ WebSocket 클라이언트 (백엔드에서 WebView로 SockJS 쓸 경우만 유지)
    implementation 'org.webjars:sockjs-client:1.5.1'
    implementation 'org.webjars:stomp-websocket:2.3.4'

    // ✅ DB
    runtimeOnly 'com.mysql:mysql-connector-j'

    // ✅ Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // ✅ YAML 자동완성 지원
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // ✅ 개발 편의
//    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // ✅ 테스트
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // ✅ Swagger (OpenAPI)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    // ✅ email 인증 (JavaMailSender)
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    
    // ✅ Oauth2 로그인
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // ✅ 웹 클라이언트
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
}

tasks.named('test') {
    useJUnitPlatform()
}

// ✅ 멀티모듈 루트에서 bootJar/jar 명확히 구분 시 필요
bootJar {
    enabled = true
}
jar {
    enabled = false
}
